# iref

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO  build.rs
.github/: FUNDING.yml
.github/workflows/: ci.yml
automata/: iri.aut.cbor  uri.aut.cbor
automata/iri/: authority.aut.cbor  path.aut.cbor  port.aut.cbor  reference.aut.cbor  scheme.aut.cbor  userinfo.aut.cbor
automata/uri/: authority.aut.cbor  host.aut.cbor  path.aut.cbor  reference.aut.cbor  segment.aut.cbor
crates/core/: Cargo.toml  README.md
crates/core/automata/: iri.aut.cbor  uri.aut.cbor
crates/core/automata/iri/: host.aut.cbor  path.aut.cbor  query.aut.cbor  segment.aut.cbor
crates/core/automata/uri/: fragment.aut.cbor  reference.aut.cbor  scheme.aut.cbor  userinfo.aut.cbor
crates/core/crates/core/automata/iri/: fragment.aut.cbor
crates/core/crates/core/automata/uri/: authority.aut.cbor  port.aut.cbor
crates/core/src/: lib.rs  utils.rs
crates/core/src/common/: authority.rs  authority_mut.rs  parse.rs  path.rs  path_mut.rs  reference.rs
crates/core/src/iri/: authority.rs  authority_mut.rs  fragment.rs  mod.rs  path.rs  path_mut.rs  query.rs  reference.rs
crates/core/src/iri/authority/: host.rs  userinfo.rs
crates/core/src/iri/path/: segment.rs
crates/core/src/uri/: authority.rs  authority_mut.rs  fragment.rs  grammar.abnf  mod.rs  path.rs  path_mut.rs  query.rs  reference.rs
crates/core/src/uri/authority/: host.rs  port.rs  userinfo.rs
crates/core/src/uri/path/: segment.rs
crates/core/src/uri/scheme/: data.rs  mod.rs
crates/macros/: Cargo.toml  README.md
crates/macros/src/: lib.rs
examples/: basic.rs  buffer.rs  example.rs  references.rs  resolution.rs  serde.rs
src/: common.rs  iri.rs  lib.rs  parse.rs  parsing.rs  pct-str.rs  serde.rs  uri.rs  url.rs  utf8.rs  utils.rs
src/common/: authority.rs  authority_mut.rs  fragment.rs  grammar.abnf  grammar.rs  mod.rs  parse.rs  path.rs  path_mut.rs  port.rs  query.rs  reference.rs  scheme.rs
src/common/authority/: mod.rs  mut.rs
src/common/path/: mod.rs  mut.rs  segment.rs
src/iri/: authority.rs  authority_mut.rs  buffer.rs  error.rs  fragment.rs  grammar.abnf  grammar.rs  host.rs  mod.rs  path.rs  path_mut.rs  port.rs  query.rs  reference.rs  scheme.rs  segment.rs  userinfo.rs
src/iri/authority/: host.rs  mod.rs  mut.rs  userinfo.rs
src/iri/path/: mod.rs  mut.rs  segment.rs
src/parsing/: mod.rs  utf8.rs
src/reference/: buffer.rs  mod.rs
src/uri/: authority.rs  authority_mut.rs  error.rs  fragment.rs  grammar.rs  mod.rs  path.rs  path_mut.rs  query.rs  reference.rs  scheme.rs
src/uri/authority/: host.rs  mod.rs  mut.rs  port.rs  userinfo.rs
src/uri/path/: mod.rs  mut.rs  segment.rs
src/uri/scheme/: mod.rs
src/uri_iri/: iri.rs  mod.rs  uri.rs
tests/: parsing.rs
