[package]
name = "iref"
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
repository = "https://github.com/timothee-haudebourg/iref"
documentation = "https://docs.rs/iref"
readme = "README.md"
version = "3.2.2"
edition = "2024"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["web-programming", "internationalization"]
keywords = ["iri", "uri", "url", "resource", "identifier"]
license = "MIT/Apache-2.0"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
str-newtype.path = "/home/timothee/Projets/utils/parsing/str-newtype/"
static-automata.path = "/home/timothee/Projets/utils/parsing/static-automata/"
serde = { version = "1.0", optional = true }
smallvec = "1.14.0"
thiserror = "2.0.12"
pct-str = "2.0.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "serde"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
