[package]
name = "iref"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
categories = ["web-programming", "internationalization"]
keywords = ["iri", "uri", "url", "resource", "identifier"]
repository = "https://github.com/timothee-haudebourg/iref"
documentation = "https://docs.rs/iref"
readme = "README.md"
license = "MIT/Apache-2.0"
edition = "2024"
rust-version = "1.85.0"
version = "3.2.2"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
str-newtype = "1.0"
static-automata = "1.0"
serde = { version = "1.0", optional = true }
smallvec = "1.14.0"
thiserror = "2.0.12"
pct-str = "2.0.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "serde"
required-features = ["serde"]

[package.metadata.docs.rs]
all-features = true
