[package]
name = "iref-core"
version = "3.1.4"
edition = "2021"
authors = ["Timothée Haudebourg <author@haudebourg.net>"]
categories = ["web-programming", "internationalization"]
keywords = ["iri", "uri", "url", "resource", "identifier"]
description = "Uniform & Internationalized Resource Identifiers (URIs/IRIs), borrowed and owned."
repository = "https://github.com/timothee-haudebourg/iref"
documentation = "https://docs.rs/iref"
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
default = []
serde = ["dep:serde"]
data = ["dep:base64"]

[dependencies]
pct-str = "2.0"
smallvec = "1.2"
thiserror = "1.0.40"
static-regular-grammar = "2.0"
serde = { version = "1.0", optional = true }
hashbrown = { version = "0.14.0", optional = true }
base64 = { version = "0.22.1", optional = true }