[package]
name = "iref-macros"
description = "Macros for the `iref` library"
repository = "https://github.com/timothee-haudebourg/iref"
documentation = "https://docs.rs/iref"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
iref-core.workspace = true
syn = "2.0.29"
quote = "1.0.33"